--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,64 @@ body {
     .header__hamburger.active .header__hamburger-bar:nth-child(3) {
       transform: translateY(-8px) rotate(-45deg); } }
 
+.footer {
+  background-color: #2c343e;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-block: 2.5rem;
+  padding-inline: 3rem; }
+  .footer__navigation {
+    display: flex; }
+  .footer__logo {
+    height: 1.625rem; }
+  .footer__nav-menu {
+    list-style: none;
+    display: flex; }
+  .footer__nav-link {
+    font-family: "Barlow", sans-serif;
+    font-weight: bold;
+    font-size: 0.9375rem;
+    text-transform: uppercase;
+    letter-spacing: 0.92px;
+    line-height: 0.9375rem;
+    text-decoration: none;
+    color: #848990; }
+  .footer__nav-link:hover {
+    color: #fefcf6;
+    transition: all 0.3s; }
+
+@media only screen and (max-width: 46rem) {
+  .footer {
+    background-color: #2c343e;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
+    flex-direction: column; }
+    .footer__navigation {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center; }
+    .footer__logo {
+      height: 1.625rem; }
+    .footer__nav-menu {
+      column-gap: 1.3rem; } }
+
+@media only screen and (max-width: 35rem) {
+  .footer {
+    background-color: #2c343e;
+    display: flex; }
+    .footer__navigation {
+      display: flex; }
+    .footer__logo {
+      height: 1.625rem; }
+    .footer__nav-menu {
+      flex-direction: column;
+      padding: 2.2rem 0 1.2rem 0; }
+    .footer__nav-item {
+      margin-bottom: 1rem; } }
+
 .collection {
   text-align: center;
   margin-top: 7rem; }
